fixed the typewriter text from overlapping and centered the links but can figure out how to put it back on the bottom for now

--- a/index.css
+++ b/index.css
@@ -1,13 +1,13 @@
-header{
+/* header{
     width: 100%;
-    height: 100px;
+    height: absolute;
     background: black;
     color: white;
     display: flex;
     justify-content: space-around;
     align-items: center;
     font-family: Arial, Helvetica, sans-serif;
-}
+} */
 
 .logo {
     color: white;
@@ -15,16 +15,16 @@ header{
     font-weight: bolder;
 }
 
-.nav {
+/* .nav {
     display: flex;
     align-items: center;
     font-size: 1em;
-}
+} */
 
-.nav ol {
+/* .nav ol {
     display: flex;
     list-style: none;
-}
+} */
 
 .btn {
     position: relative;
@@ -36,13 +36,13 @@ header{
     display: none;
 }
 
-.nav ol li {margin: 1em;}
+/* .nav ol li {margin: 1em;} */
 
-.nav ol li a{
+/* .nav ol li a{
     text-decoration: none;
-}
+} */
 
-.nav ol li a:hover {color: rgb(83, 54, 150);}
+/* .nav ol li a:hover {color: rgb(83, 54, 150);} */
 
 a:link {
     color: white;
@@ -56,6 +56,7 @@ body {
     background-color: black;
     color: white;
     font-family: Arial, Helvetica, sans-serif;
+    display: block;
 }
 
 .centered {
@@ -69,6 +70,7 @@ body {
 .logosize {
     font-size: 2em;
     letter-spacing: -5px;
+    padding-bottom: 20px;
 }
 
 .lower-center {
@@ -88,20 +90,29 @@ body {
 footer {
     text-decoration: none;
     font-size: 1em;
-    position: absolute;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+
+    /* position: absolute;
     bottom: 0;
     width: 97%;
     height: 4rem;
     display: flex;
-    justify-content: center;
+    justify-content: center; */
 }
 
 .footer ol {
-    display: flex;
     list-style: none;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
 }
 
-.footer ol li {margin: 1em;}
+.footer ol li {
+    margin: 1em;
+}
 
 .footer ol li a{
     text-decoration: none;
@@ -126,15 +137,16 @@ footer {
   }
   
   /* text animation */
-  
   @keyframes animated-text{
     from{width: 0;}
     to{width: 235px;}
   }
   
   /* cursor animations */
-  
   @keyframes animated-cursor{
     from{border-right-color: rgb(255, 255, 255);}
     to{border-right-color: transparent;}
   }
+
+
+
